Fix styling on Firefox and Safari

--- a/app/globals.css
+++ b/app/globals.css
@@ -17,7 +17,3 @@
     transform: translateY(0);
   }
 }
-
-.grid::after {
-  display: none;
-}
